2.2.11

 *) Eliminate the use of locks to assist in the clean shutdown of
    applications.  Instead, it is assumed that applications handle
    termination signals properly (this is now embedded in the C
    application lib).

 *) Fix Win32 process termination.  Proper operation requires the use of
    an updated application lib (termination is now signalled with an
	Event and handled by specialized thread).

 *) Docs cleanup.  Andrew Benham [adsb@bigfoot.com]

 *) Added code so if the last instance of a dynamic application died without
    provocation, then don't restart it if singleThreshold > 0 (i.e. if the
    configuration allows the last instance to be killed, then allow it to die).
    Andrew Benham [adsb@bigfoot.com]

 *) Fix the loadFactor calculation used to determine when dyanmic
    applications could be killed off due to low demand [adsb@bigfoot.com].

 *) Fix a deadlock condition that could occur with Win32 named 
    pipes (dynamic).

 *) Fix a potential deadlock condition when FastCGI application
    sent responses while still reading the client request (POST data).

2.2.10

 *) Allow absolute pathnames in the -socket argument.  Suggested by 
    Christian Jaeger [christian.jaeger@sl.ethz.ch].

 *) Don't invoke suexec when the user/group for the fastcgi application
    is the same as the apache main server.  This is consistent with 
    apache's suexec handling.  Suggested by Nikolaus Rath [Nikolaus@rath.org].

 *) Reset the apache drop dead timer upon successful read or writes
    to/from the client.  This eliminates timeouts that were occuring
    during the large file transfers to/from slow clients.

 *) Support generic wrappers such as cgiwrap by eliminating dependencies
    on Apache's SUEXEC, renaming the FastCgiSuexec directive 
    FastCgiWrapper and eliminating any checks regarding the target 
    application (this is the repsonibility of the wrapper).

 *) Fix a nasty bug that occurred when a client aborted a POST request 